2003-04-03  Mark Page  <mpagenva@aol.com>

	* nsd/tclinit.c:
	* nsd/tclcmds.c: Provide tcl api that exposes Ns_TclInitInterps
	and Ns_TclRegisterTrace.  ns_register_interptrace.

2003-03-30  Scott S. Goodwin  <scott@scottg.net>

	* include/ns.h:
          nsd/driver.c:
          nssock/nssock.c:
          nsssl/nsssl.c: Modified Ns_DriverInit. Instead of passing all args
          as parameters to Ns_DriverInit, a comm module must now create an
          Ns_DriverInitData structure and populate it with appropriate values
          (see include/ns.h) and pass that in the call to Ns_DriverInit. The
          Ns_DriverInitData structure is versioned so that we can extend it
          later without affecting other modules.

2003-03-28  Mark Page  <mpagenva@aol.com>

	* nsd/tclhttp.c: (bug) Fix uninitialized hdrs var, was causing segfault.

2003-03-21  Mark Page  <mpagenva@aol.com>

        * TAG aolserver_v4_r0_beta_4

2003-03-19  Mark Page  <mpagenva@aol.com>

        * nsd/tclhttp.c: Added method argument to ns_http queue api to
        allow sending POSTs as well as GETs.

2003-03-19  Mark Page  <mpagenva@aol.com>

        * nsext/nsext.c: Change back to using ns_socketpair for local
        proxies, to retain PEEK functionality.

2003-03-19  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/modload.c: added fallback for loading regular
	shared libraries in addition to bundles on Darwin.

	* include/tcl.h: added set of version macros
	* nsd/config.c: added Ns_GetVersion API call.

2003-03-10  Scott S. Goodwin  <scott@scottg.net>

	* nscgi/nscgi.c: (bug) SERVER_NAME is now set correctly.

2003-03-10  Mark Page  <mpagenva@aol.com>

	* nsd/sched.c: (bug) Fix problem with shutting down event threads
	(these service detachted thread processing) on a server shutdown.

2003-03-07  Nathan Folkman <shmooved@aol.com>

        * TAG aolserver_v4_r0_beta_3

2003-03-07  Zoran Vasiljevic <zoran@archiware.com>

	* include/ns.h:
	* nscgi/nscgi.c:
	* nscp/nscp.c:
	* nsd/adpeval.c: