@@ -1,3 +1,10 @@
+2003-04-04  Mark Page  <mpagenva@aol.com>
+
+	* nsd/tclinit.c:
+	* nsd/tclcmds.c: Moved interp tracing functionality into ns_ictl
+	api as one of it's subfunctions, removing the
+	ns_register_interptrace api previously created.
+
 2003-04-03  Mark Page  <mpagenva@aol.com>
 
 	* nsd/tclinit.c:
